--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <body>
+  <title>not A haiku </title>
 <h>
-  <a><b>I am a cat</br> hire me</br> give me meece and scratch me behind the ears</b></a>
+  <a><b>In HTML</br> the letter P</br> stands for programming</b></a>
 </body>
 </html>
